--- a/src/app/ui/forms/form-user/form-user.component.html
+++ b/src/app/ui/forms/form-user/form-user.component.html
@@ -35,9 +35,9 @@
 
       <mr-sub-form-multi-select
         [label]="'Hobbies'"
-        [placeholder]="'Selecciona tus hobbies'"
+        [placeholder]="'Seleccionar...'"
         [icon]="'fas fa-skating'"
-        [options]="[{id: '1', label: 'cantar'}, {id: '2', label: 'follar'}]"
+        [options]="[{id: '1', label: 'cantar'}, {id: '2', label: 'follar'}, {id: '3', label: 'follar'}, {id: '5', label: 'follar'}, {id: '4', label: 'follar'}]"
         [formControlName]="form.formControlNames.hobbies"
       ></mr-sub-form-multi-select>
   
