--- a/src/app/ui/forms/sub-form-location/sub-form-location.component.html
+++ b/src/app/ui/forms/sub-form-location/sub-form-location.component.html
@@ -4,7 +4,7 @@
       [canDeleteText]="true"
       [icon]="'fas fa-compass'"
       [label]="'Departamento'"
-      [placeholder]="'Antioquia...'"
+      [placeholder]="'Seleccionar...'"
       [formControlName]="form.formControlNames.state"
     ></mr-sub-form-select>
 
@@ -12,7 +12,7 @@
       [canDeleteText]="true"
       [icon]="'fas fa-city'"
       [label]="'Ciudad'"
-      [placeholder]="'Medellín...'"
+      [placeholder]="'Seleccionar...'"
       [formControlName]="form.formControlNames.city"
     ></mr-sub-form-select>
   </fieldset>
