--- a/src/app/shared/shell/home-content-container/home-content-container.component.html
+++ b/src/app/shared/shell/home-content-container/home-content-container.component.html
@@ -1,8 +1,14 @@
 <ng-container *ngIf="{
-  currentUser: (currentUser$ | async)
+  currentUser: (currentUser$ | async),
+  states: (states$ | async),
+  hobbies: (hobbies$ | async),
+  cities: (cities$ | async)
 } as data">
   <mr-home-content
     [currentUser]="data.currentUser"
+    [cities]="data.cities"
+    [states]="data.states"
+    [hobbies]="data.hobbies"
     (userUpdated)="handleUpdateUser($event)"
   ></mr-home-content>
 </ng-container>
