User update profile was finished

--- a/src/app/shared/shell/home-content-container/home-content-container.component.html
+++ b/src/app/shared/shell/home-content-container/home-content-container.component.html
@@ -10,5 +10,6 @@
     [states]="data.states"
     [hobbies]="data.hobbies"
     (userUpdated)="handleUpdateUser($event)"
+    (stateSelected)="handleLoadCitiesByState($event)"
   ></mr-home-content>
 </ng-container>
