--- a/src/app/ui/blocks/home-content/home-content.component.html
+++ b/src/app/ui/blocks/home-content/home-content.component.html
@@ -44,6 +44,7 @@
       [states]="states"
       [hobbies]="hobbies"
       (dataOutput)="handleUpdateUser($event)"
+      (stateSelected)="handleLoadCities($event)"
     ></mr-form-user>
   </ng-container>
 </mr-modal>
