--- a/src/app/ui/layouts/layout-main/layout-main.component.html
+++ b/src/app/ui/layouts/layout-main/layout-main.component.html
@@ -1,3 +1,5 @@
+<router-outlet name="notifications"></router-outlet>
+
 <section class="layout-main">
   <section>
     <router-outlet name="header"></router-outlet>
