Added a responsive design for the channels view

--- a/src/app/ui/blocks/channels-content/channels-content.component.html
+++ b/src/app/ui/blocks/channels-content/channels-content.component.html
@@ -15,47 +15,14 @@
     <mr-card class="channels-content__notices-container">
         <ng-container>
             <div class="channels-content__notices">
-                <div class="channels-content__notice">
-                    <figure class="channels-content__image channels-content__image--shadow">
-                        <mr-image [image]="'assets/img/logo-2.png'" [alt]="'notice-item'"></mr-image>
-                    </figure>
-                    <mr-text [text]="'Ayuda y soporte'" [size]="'extra-large'"  [weight]="'bold'"></mr-text>
-                </div>
-    
-                <div class="channels-content__notice">
-                    <figure class="channels-content__image">
-                        <mr-image [image]="'assets/img/logo-2.png'" [alt]="'notice-item'"></mr-image>
-                    </figure>
-                    <mr-text [text]="'Ayuda y soporte'" [size]="'extra-large'"  [weight]="'bold'"></mr-text>
-                </div>
-    
-                <div class="channels-content__notice">
-                    <figure class="channels-content__image">
-                        <mr-image [image]="'assets/img/logo-2.png'" [alt]="'notice-item'"></mr-image>
-                    </figure>
-                    <mr-text [text]="'Ayuda y soporte'" [size]="'extra-large'"  [weight]="'bold'"></mr-text>
-                </div>
-    
-                <div class="channels-content__notice">
-                    <figure class="channels-content__image">
-                        <mr-image [image]="'assets/img/logo-2.png'" [alt]="'notice-item'"></mr-image>
-                    </figure>
-                    <mr-text [text]="'Ayuda y soporte'" [size]="'extra-large'"  [weight]="'bold'"></mr-text>
-                </div>
-    
-                <div class="channels-content__notice">
-                    <figure class="channels-content__image">
-                        <mr-image [image]="'assets/img/logo-2.png'" [alt]="'notice-item'"></mr-image>
-                    </figure>
-                    <mr-text [text]="'Ayuda y soporte'" [size]="'extra-large'"  [weight]="'bold'"></mr-text>
-                </div>
-    
-                <div class="channels-content__notice">
-                    <figure class="channels-content__image">
-                        <mr-image [image]="'assets/img/logo-2.png'" [alt]="'notice-item'"></mr-image>
-                    </figure>
-                    <mr-text [text]="'Ayuda y soporte'" [size]="'extra-large'"  [weight]="'bold'"></mr-text>
-                </div>
+                <mr-notice></mr-notice>
+                <mr-notice></mr-notice> 
+                <mr-notice></mr-notice> 
+                <mr-notice></mr-notice> 
+                <mr-notice></mr-notice> 
+                <mr-notice></mr-notice> 
+                <mr-notice></mr-notice> 
+                <mr-notice></mr-notice> 
             </div>
         </ng-container>
     </mr-card>
