--- a/src/app/ui/forms/form-user-login/form-user-login.component.html
+++ b/src/app/ui/forms/form-user-login/form-user-login.component.html
@@ -37,6 +37,6 @@
       (clicked)="manualSave$.next()"
     ></mr-button>
 
-    <a class="form-user-login__link" (click)="navigateToRegister()">¿No tienes cuenta? Creala desde aquí.</a>
+    <a class="form-user-login__link" (click)="navigateToRegister()">Registrarse</a>
   </fieldset>
 </form>
