--- a/src/app/ui/forms/form-user-login/form-user-login.component.scss
+++ b/src/app/ui/forms/form-user-login/form-user-login.component.scss
@@ -25,10 +25,10 @@
   }
 
   &__link {
+    @include styles.font-base;
     display: flex;
     justify-content: flex-end;
     color: styles.$color-primary-color-light;
-    text-decoration: underline;
     cursor: pointer;
   }
 } 
