--- a/src/app/ui/blocks/aside-menu/aside-menu.component.html
+++ b/src/app/ui/blocks/aside-menu/aside-menu.component.html
@@ -2,8 +2,8 @@
   <div class="aside-menu__content">
     <div class="aside-menu__menu">
       <mr-item-menu
-        *ngFor="let item of items"
-        [item]="item"
+        *ngFor="let channel of channels"
+        [item]="channel"
       ></mr-item-menu>
     </div>
     <mr-current-user
