--- a/src/app/ui/blocks/navbar/navbar.component.html
+++ b/src/app/ui/blocks/navbar/navbar.component.html
@@ -12,6 +12,7 @@
     </div>
     <mr-aside-menu 
       [isVisible]="isOpen"
+      [channels]="channels"
       [currentUser]="currentUser"
       (clickedLogout)="handleLogout()"
     ></mr-aside-menu>
