--- a/src/app/ui/elements/item-menu/item-menu.component.scss
+++ b/src/app/ui/elements/item-menu/item-menu.component.scss
@@ -6,6 +6,7 @@
   grid-template-columns: min-content auto;
   align-items: center;
   text-decoration: none;
+  cursor: pointer;
 
   &__link {
     text-decoration: none;
