--- a/src/app/shared/shell/header-container/header-container.component.html
+++ b/src/app/shared/shell/header-container/header-container.component.html
@@ -1,10 +1,12 @@
 <ng-container *ngIf="{
   currentUser: (currentUser$ | async) ,
-  channels: (channels$ | async)
+  channels: (channels$ | async),
+  channel: (channel$ | async)
 } as data">
   <mr-navbar
     [currentUser]="data.currentUser"
     [channels]="data.channels"
+    [channel]="data.channel"
     (clickedLogout)="handleLogout()"
   ></mr-navbar>
 </ng-container>
