--- a/src/app/ui/blocks/aside-menu/aside-menu.component.html
+++ b/src/app/ui/blocks/aside-menu/aside-menu.component.html
@@ -8,6 +8,7 @@
     </div>
     <mr-current-user
       [currentUser]="currentUser"
+      [channel]="channel"
       (clickedLogout)="handleLogout()"
     ></mr-current-user>
   </div>
