--- a/src/app/ui/elements/current-user/current-user.component.html
+++ b/src/app/ui/elements/current-user/current-user.component.html
@@ -1,4 +1,4 @@
-<div class="current-user">
+<div class="current-user current-user--{{channel.type}}">
   <div class="current-user__user">
     <figure class="current-user__image">
       <mr-image [image]="currentUser?.image?.url" [rounded]="'circle'"></mr-image>
