Validation was added

--- a/src/app/ui/blocks/navbar/navbar.component.html
+++ b/src/app/ui/blocks/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <header class="navbar__container">
-  <nav class="navbar__content navbar__content--{{channel.type}}">
+  <nav class="navbar__content navbar__content--{{channel?.type}}">
     <div class="navbar__branding">
       <mr-button-burguer 
         class="navbar__button" 
