Added admin component

--- a/src/app/ui/blocks/table/table.component.html
+++ b/src/app/ui/blocks/table/table.component.html
@@ -36,3 +36,7 @@
     No se encontraron resultados.
   </div>
 </ng-template>
+
+<div>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est blanditiis magnam nisi, maiores ea facere quaerat ratione nobis, modi velit corrupti iure delectus deserunt molestiae accusantium hic? Omnis placeat id modi! Omnis enim, odio distinctio aspernatur quam autem recusandae delectus!
+</div>
