Get notices and tabs

--- a/src/app/shared/admin/admin-content-container/admin-content-container.component.html
+++ b/src/app/shared/admin/admin-content-container/admin-content-container.component.html
@@ -1,5 +1,13 @@
-<mr-card>
-  <<ng-container>
-    <mr-table></mr-table>
-  </ng-container>
-</mr-card>
+<ng-container *ngIf="{
+  tabs: (tabs$ | async)
+} as data">
+  <mr-tabs [items]="data.tabs"></mr-tabs>
+
+  <mr-card>
+    <ng-container>
+      <mr-table></mr-table>
+    </ng-container>
+  </mr-card>
+</ng-container>
+
+
