--- a/src/app/ui/elements/button/button.component.html
+++ b/src/app/ui/elements/button/button.component.html
@@ -5,6 +5,7 @@
   [disabled]="isDisabled"
   (click)="handleClick()"
 >
+  <i *ngIf="icon" class="button__icon {{icon}}"></i>
   <mr-text 
     [type]="'line'"  
     [weight]="'bold'" 
