--- a/src/app/ui/elements/item-menu/item-menu.component.scss
+++ b/src/app/ui/elements/item-menu/item-menu.component.scss
@@ -13,7 +13,8 @@
   }
 
   &__image {
-    width: styles.func-toRem(5);
+    width: styles.func-toRem(3.5);
+    height: styles.func-toRem(3);
   }
 
   &__label {
