--- a/src/app/ui/elements/tab-buttons/tab-buttons.component.html
+++ b/src/app/ui/elements/tab-buttons/tab-buttons.component.html
@@ -1,3 +1,3 @@
-<div class="tab">
-    <mr-button *ngFor="let item of items" [label]="item.label" [icon]="item.icon"></mr-button>
+<div class="tab-buttons">
+    <mr-button *ngFor="let item of items" [label]="item.label" [display]="'block'" [icon]="item.icon"></mr-button>
 </div>
