Validation was added

--- a/src/app/shared/admin/admin-content-container/admin-content-container.component.html
+++ b/src/app/shared/admin/admin-content-container/admin-content-container.component.html
@@ -9,7 +9,7 @@
           ['Pito',''],
           ['Pitazo',''],
         ]"
-        [items]="data.notices.notices || []"
+        [items]="data.notices?.notices || []"
         [itemTemplateRef]="noticeTemplate"
       ></mr-table>
     </ng-container>
